syntax = "proto3";
package daomint.daomint;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "DAOmint/x/daomint/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateVoting(MsgCreateVoting) returns (MsgCreateVotingResponse);
  rpc CreateVote(MsgCreateVote) returns (MsgCreateVoteResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateVoting {
  string creator = 1;
  string title = 2;
  string desc = 3;
  uint64 expiration = 4;
  uint64 id = 5;
}

message MsgCreateVotingResponse {
  uint64 id = 1;
}

message MsgCreateVote {
  string creator = 1;
  uint64 votingID = 2;
  uint64 option = 3;
  uint64 id = 4;
}

message MsgCreateVoteResponse {
  uint64 id = 1;
}

// this line is used by starport scaffolding # proto/tx/message
